PodiumD 4.2: IN-770 keycloak upgrade (#110)
- Bump Keycloak image and appVersion to 26.3.1 and config-cli to 6.4.0.
- Update Infinispan dependencies and configurations.
- Replace `application/x-jboss-marshalling` with
`application/x-protostream` for cache encoding.
- Adjust Keycloak configurations, including cache and global settings.

--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -78,19 +78,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "openzaak"
       - clientId: abc
         name: Open Archiefbeheer
         enabled: true
@@ -113,19 +115,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "abc"
       - clientId: monitoring
         name: {{ .Values.keycloak.config.clients.monitoring.name|quote }}
         enabled: {{ .Values.keycloak.config.clients.monitoring.enabled }}
@@ -152,6 +156,12 @@ data:
               claim.name: "monitoring_roles"
               jsonType.label: "String"
               usermodel.clientRoleMapping.clientId: "monitoring"
+          - name: "all-users-are-viewers"
+            protocol: "openid-connect"
+            protocolMapper: "oidc-hardcoded-role-mapper"
+            consentRequired: false
+            config:
+              role: "monitoring.viewer"
       - clientId: opennotificaties
         name: Open Notificaties
         enabled: true
@@ -174,19 +184,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "opennotificaties"
       - clientId: objecten
         name: Objecten
         enabled: true
@@ -209,19 +221,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "objecten"
       - clientId: objecttypen
         name: Objecttypen
         enabled: true
@@ -244,19 +258,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "objecttypen"
       - clientId: openklant
         name: Open Klant
         enabled: true
@@ -279,19 +295,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "openklant"
       - clientId: openformulieren
         name: Open Formulieren
         enabled: true
@@ -314,19 +332,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "openformulieren"
       - clientId: openinwoner
         name: Open Inwoner
         enabled: true
@@ -349,19 +369,21 @@ data:
               access.token.claim: "true"
               claim.name: "preferred_username"
               jsonType.label: "String"
-          - name: "groups-member"
+          - name: "client roles"
             protocol: "openid-connect"
-            protocolMapper: "oidc-group-membership-mapper"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
             consentRequired: false
             config:
-              full.path: "false"
               introspection.token.claim: "true"
-              userinfo.token.claim: "true"
               multivalued: "true"
+              userinfo.token.claim: "false"
+              user.attribute: "foo"
               id.token.claim: "true"
               lightweight.claim: "false"
               access.token.claim: "true"
               claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "openinwoner"
       - clientId: kiss
         name: Kiss
         enabled: true
@@ -552,6 +574,7 @@ data:
       contentSecurityPolicy: "frame-src 'self'; frame-ancestors 'self'; object-src 'none';"
       xXSSProtection: "1; mode=block"
       strictTransportSecurity: ""
+    {{- if not .Values.keycloak.config.skipRoles }}
     roles:
       realm:
         - name: podiumd-admin
@@ -562,6 +585,7 @@ data:
         monitoring:
           - name: admin
           - name: editor
+          - name: viewer
         openklant:
           - name: administrators
         objecten:
@@ -587,6 +611,8 @@ data:
           - name: raadpleger
           - name: recordmanager
           - name: domein_elk_zaaktype
+    {{- end }}
+    {{- if not .Values.keycloak.config.skipGroups }}
     groups:
       - name: administrators
         path: /administrators
@@ -682,6 +708,7 @@ data:
             - "zaakafhandelcomponent_user"
             - "domein_elk_zaaktype"
             - "raadpleger"
+    {{- end }}
     requiredActions:
       - name: "Configure OTP"
         providerId: CONFIGURE_TOTP
