--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -470,6 +470,9 @@ openzaak:
     client_id: "<openzaak_client_id>"
     secret: "<openzaak_secret>"
     enabled: true
+    e2eTestZaaktype:
+      # set to false to disable automatic creation and publishing of the e2e-test zaaktype if it does not exist yet
+      create: true
   settings:
     allowedHosts: openzaak-nginx.podiumd.svc.cluster.local
     email:
