feat: added zacInternalEndpointsApiKey to values.yaml

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1897,6 +1897,7 @@ zac:
       rsin: "000000000"
     verantwoordelijke:
       rsin: "000000000"
+  zacInternalEndpointsApiKey: "dummy"
   smartDocuments:
     enabled: false
     url: ""
