--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -22,7 +22,7 @@ keycloak:
   # -- cache setting for keycloak, if there are multiple instances they will automatically form a cluster for the cache
   cache:
     enabled: true
-    stackName: kubernetes
+    stack: jdbc-ping
   config:
     adminFrontendUrl: https://keycloak-admin.example.nl
     # Example configuration
@@ -44,7 +44,7 @@ keycloak:
     #        authorizationUrl: "https://login.microsoftonline.com/organizations/oauth2/v2.0/authorize"
     #        logoutUrl: "https://login.microsoftonline.com/organizations/oauth2/v2.0/logout"
     # -- identity providers for the admin realm (usually master)
-    adminIdentityProviders: {}
+    #adminIdentityProviders: {}
     # Example configuration
     #    identityProviderMappers:
     #    - name: "admin-group-mapper"
@@ -54,7 +54,7 @@ keycloak:
     #        syncMode: "FORCE"
     #        role: "admin"
     # -- identity provider mapper for the admin realm
-    adminIdentityProviderMappers: {}
+    #adminIdentityProviderMappers: {}
     adminOtpEnabled: false
     realm: podiumd
     realmDisplayName: PodiumD
@@ -62,6 +62,8 @@ keycloak:
     # Dont include the realmIdentityProviders and realmIdentityProviderMappers by default as it overwrites currently configured entra providers for multiple gemeentes
     # realmIdentityProviders: {}
     # realmIdentityProviderMappers: {}
+    skipGroups: true
+    skipRoles: true
     smtp:
       server: mail.example.nl
       port: "587"
@@ -79,23 +81,31 @@ keycloak:
   # customCaExistingSecret: ispn-secret
   # -- enable keycloak by default
   enabled: true
+  # keycloak image scanner only checks repo url/path not image hash
+  # the allowInsecureImages needs to be set to true when using an ACR
+  global:
+    security:
+      allowInsecureImages: true
   # -- required to activate infinispan
   #extraEnvVars: |
   #  - name: KC_TRUSTSTORE_PATHS
   #    value: "/opt/bitnami/keycloak/custom-ca"
   # -- required to activate infinispan
-  #extraStartupArgs: "--cache-remote-host=ispn --cache-remote-port=11222 --cache-remote-username=keycloak --cache-remote-password=changemenow --log-level=INFO --spi-connections-infinispan-quarkus-site-name=ontw-dimp"
+  #extraStartupArgs: "--cache-remote-host=ispn --cache-remote-port=11222 --cache-remote-username=keycloak --cache-remote-password=changemenow --log-level=INFO --spi-cache-embedded-default-site-name=ontw-dimp --features=multi-site --cache=ispn"
   # image parameters for keycloak
+  # docker.io/bitnami/keycloak:26.3.1
   image:
-    registry: ""
-    repository: keycloak
-    tag: 25.0.6
+    #registry: ""
+    #repository: keycloak
+    tag: 26.3.1
   externalDatabase:
     host: "postgres"
     database: ""
     user: ""
     password: ""
   fullnameOverride: keycloak
+  ingress:
+    hostnameStrict: true
   keycloakConfigCli:
     cleanupAfterFinished:
       enabled: true
@@ -103,11 +113,12 @@ keycloak:
     enabled: true
     existingConfigmap: podiumd-config
     # image parameters for keycloak-config-cli
+    # docker.io/bitnami/keycloak-config-cli:6.4.0
     image:
-      registry: ""
-      repository: keycloak-config-cli
-      # -- image tag for keycloak-config-cli, this must be a version that is compatible with the keycloak image tag
-      tag: "6.1.6"
+      #registry: ""
+      #repository: keycloak-config-cli
+      # -- this must be a version of keycloak-config-cli that is compatible with the keycloak image tag
+      tag: 6.4.0
   metrics:
     enabled: true
   pdb:
@@ -126,7 +137,6 @@ keycloak:
   serviceMonitor:
     enabled: true
   production: true
-  proxy: edge
   proxyHeaders: forwarded
   postgresql:
     enabled: false
@@ -134,6 +144,10 @@ keycloak:
   extraEnvVarsCM: keycloak-extra-env-vars
 
 infinispan:
+  # -- image data for infinispan containers
+  #images:
+  #  server: quay.io/infinispan/server:15.2
+  #  initContainer: registry.access.redhat.com/ubi8-micro:8.10-1751466198
   deploy:
     nameOverride: ispn
     replicas: 2
@@ -178,8 +192,10 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
+              transaction:
+                mode: "NON_XA"
               encoding:
-                mediaType: "application/x-jboss-marshalling"
+                mediaType: "application/x-protostream"
               expiration:
                 maxIdle: "-1"
                 lifespan: "-1"
@@ -189,25 +205,15 @@ infinispan:
               persistence:
                 fileStore:
                   path: cache
-          sessions:
-            distributedCache:
-              statistics: "true"
-              owners: 2
-              mode: "SYNC"
-              encoding:
-                mediaType: "application/x-jboss-marshalling"
-              expiration:
-                lifespan: "-1"
-              persistence:
-                fileStore:
-                  path: cache
           authenticationSessions:
             distributedCache:
               statistics: "true"
               owners: 2
               mode: "SYNC"
+              transaction:
+                mode: "NON_XA"
               encoding:
-                mediaType: "application/x-jboss-marshalling"
+                mediaType: "application/x-protostream"
               expiration:
                 lifespan: "-1"
               persistence:
@@ -218,8 +224,10 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
+              transaction:
+                mode: "NON_XA"
               encoding:
-                mediaType: "application/x-jboss-marshalling"
+                mediaType: "application/x-protostream"
               expiration:
                 lifespan: "-1"
               persistence:
@@ -230,8 +238,10 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
+              transaction:
+                mode: "NON_XA"
               encoding:
-                mediaType: "application/x-jboss-marshalling"
+                mediaType: "application/x-protostream"
               expiration:
                 lifespan: "-1"
               persistence:
@@ -242,8 +252,10 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
+              transaction:
+                mode: "NON_XA"
               encoding:
-                mediaType: "application/x-jboss-marshalling"
+                mediaType: "application/x-protostream"
               expiration:
                 lifespan: "-1"
               persistence:
@@ -254,8 +266,10 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
+              transaction:
+                mode: "NON_XA"
               encoding:
-                mediaType: "application/x-jboss-marshalling"
+                mediaType: "application/x-protostream"
               expiration:
                 lifespan: "-1"
               persistence:
@@ -265,7 +279,7 @@ infinispan:
             replicatedCache:
               statistics: "true"
               encoding:
-                mediaType: "application/x-jboss-marshalling"
+                mediaType: "application/x-protostream"
               expiration:
                 lifespan: "-1"
       server:
@@ -456,6 +470,9 @@ openzaak:
     client_id: "<openzaak_client_id>"
     secret: "<openzaak_secret>"
     enabled: true
+    e2eTestZaaktype:
+      # set to false to disable automatic creation and publishing of the e2e-test zaaktype if it does not exist yet
+      create: true
   settings:
     allowedHosts: openzaak-nginx.podiumd.svc.cluster.local
     email:
@@ -468,7 +485,7 @@ openzaak:
   persistentVolume:
     volumeAttributeShareName: openzaak
   image:
-    tag: "1.18.0"
+    tag: "1.21.2"
   resources:
     requests:
       cpu: 100m
@@ -630,13 +647,15 @@ opennotificaties:
     #         documentatie_link: https://openzaak.example.nl/ref/kanalen/#/documenten
     #         filters:
     #           - bronorganisatie
-    #           - informatieobjecttype
+    #           - informatieobjecttype 
+    #           - informatieobjecttype.catalogus # new feature
     #           - vertrouwelijkheidaanduiding
     #       - naam: besluiten
     #         documentatie_link: https://openzaak.example.nl/ref/kanalen/#/besluiten
     #         filters:
     #           - verantwoordelijke_organisatie
     #           - besluittype
+    #           - besluittype.catalogus  # new feature
     #   # The configuration check view will show a checkmark, but for it to actually work an 
     #   # Abonnement also has to be configured via notifications_abonnementen_config. This does not work right now, 
     #   # because the spec doesn't properly support JWT. See issue open-zaak/open-zaak#1694
@@ -691,7 +710,7 @@ opennotificaties:
   persistentVolume:
     volumeAttributeShareName: opennotificaties
   image:
-    tag: "1.8.2"
+    tag: "1.10.0"
   resources:
     requests:
       cpu: 100m
@@ -849,7 +868,7 @@ objecten:
   persistentVolume:
     volumeAttributeShareName: objecten
   image:
-    tag: "3.0.4"
+    tag: "3.1.0"
   resources:
     requests:
       cpu: 100m
@@ -962,7 +981,7 @@ objecttypen:
       useTLS: true
     disable2fa: false
   image:
-    tag: "3.0.2"
+    tag: "3.0.4"
   # used for create-required-objecttypen podiumd job only
   create_required_objecttypen_job:
     enabled: true
@@ -1213,7 +1232,7 @@ openklant:
   persistentVolume:
     volumeAttributeShareName: openklant
   image:
-    tag: "2.7.0"
+    tag: "2.9.0"
   resources:
     requests:
       cpu: 100m
@@ -1386,7 +1405,7 @@ openformulieren:
   persistentVolume:
     volumeAttributeShareName: openformulieren
   image:
-    tag: "3.0.7"
+    tag: "3.0.8"
   resources:
     requests:
       cpu: 100m
@@ -1554,7 +1573,7 @@ openinwoner:
   persistentVolume:
     volumeAttributeShareName: openinwoner
   image:
-    tag: "1.29.0"
+    tag: "1.32.0"
   resources:
     requests:
       cpu: 200m
@@ -1706,9 +1725,7 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "release-1.0.x-20250418091744-8936963"
-
-
+      tag: "release-1.1.x-20250731163435-40bff18"
       pullPolicy: IfNotPresent
     resources:
       requests:
@@ -1818,10 +1835,17 @@ zac:
     code: "007"
     naam: "Example Gemeente"
     mail: "noreply@example.nl"
+  # ghcr.io/infonl/zaakafhandelcomponent:3.10.0
   image:
-    repository: ghcr.io/infonl/zaakafhandelcomponent
+    #repository: ghcr.io/infonl/zaakafhandelcomponent
     pullPolicy: IfNotPresent
-    tag: "3.5.0"
+    tag: 3.10.0
+  initContainer:
+    enabled: true
+    # curlimages/curl:8.15.0
+    image:
+      #repository: curlimages/curl
+      tag: 8.15.0
   keycloak:
     adminClient:
       id: zac-admin-client
@@ -1842,6 +1866,10 @@ zac:
   nginx:
     enabled: true
     client_max_body_size: 150M
+    # nginxinc/nginx-unprivileged:1.29.0
+    image:
+      # repository: nginxinc/nginx-unprivileged
+      tag: 1.29.0
   # notificationsSecretKey: "changeme"
   objectenApi:
     url: http://objecten.example.nl
@@ -1849,6 +1877,17 @@ zac:
   objecttypenApi:
     url: http://objecttypen.example.nl
     token: objecttypentoken
+  office_converter:
+    # ghcr.io/eugenmayer/kontextwork-converter:1.8.0
+    image:
+      #repository: ghcr.io/eugenmayer/kontextwork-converter
+      tag: 1.8.0
+  opa:
+    sidecar: false
+    # openpolicyagent/opa:1.6.0-static
+    image:
+      #repository: openpolicyagent/opa
+      tag: 1.6.0-static
   openForms:
     url: http://open-forms.example.nl
   organizations:
@@ -1856,6 +1895,7 @@ zac:
       rsin: "000000000"
     verantwoordelijke:
       rsin: "000000000"
+  zacInternalEndpointsApiKey: "dummy"
   smartDocuments:
     enabled: false
     url: ""
@@ -1865,42 +1905,49 @@ zac:
   solr-operator:
     # -- turn functionality on/off
     enabled: true
+    # apache/solr-operator:v0.9.1
     image:
       #repository:
-      #tag:
+      tag: v0.9.1
     nodeSelector: {}
     solr:
-      #busyBoxImage:
+      # library/busybox:1.37.0-glibc
+      busyBoxImage:
         #repository:
-        #tag:
+        tag: 1.37.0-glibc
       # -- set enabled to provision solrcloud as well
       enabled: true
-      #image:
+      # library/solr:9.8.1
+      image:
         #repository:
-        #tag:
+        tag: 9.8.1
       # -- define memory settings for solr in the solrcloud
       javaMem: -Xms512m -Xmx768m
       jobs:
         createZacCore: true
-        #image:
+        # curlimages/curl:8.14.1
+        image:
           #repository:
-          #tag:
+          tag: 8.14.1
     # -- namespaces to watch for solr-operator
     watchNamespaces: "podiumd"
     zookeeper-operator:
-      #hooks:
-        #image:
+      hooks:
+        # lachlanevenson/k8s-kubectl:v1.25.4
+        image:
           #repository:
-          #tag:
-      #image:
+          tag: v1.25.4
+      # pravega/zookeeper-operator:0.2.15
+      image:
         #repository:
-        #tag:
+        tag: 0.2.15
       # -- namespaces to watch for zookeeper-operator
       watchNamespace: "podiumd"
-      #zookeeper:
-        #image:
+      zookeeper:
+        # pravega/zookeeper:0.2.15
+        image:
           #repository:
-          #tag:
+          tag: 0.2.15
   zgwApis:
     url: http://open-zaak.internal
     urlExtern: http://open-zaak.example.nl
