--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,6 +37,7 @@ jobs:
           helm repo add openshift https://charts.openshift.io
           helm repo add grafana https://grafana.github.io/helm-charts
           helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo add zgw-office-addin https://infonl.github.io/zgw-office-addin
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
