--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -137,7 +137,7 @@ keycloak:
   serviceMonitor:
     enabled: true
   production: true
-  proxyHeaders: forwarded
+  proxyHeaders: xforwarded
   postgresql:
     enabled: false
   nameOverride: keycloak
@@ -868,7 +868,7 @@ objecten:
   persistentVolume:
     volumeAttributeShareName: objecten
   image:
-    tag: "3.1.0"
+    tag: "3.1.3"
   resources:
     requests:
       cpu: 100m
